--- a/src/main/resources/ui/main.fxml
+++ b/src/main/resources/ui/main.fxml
@@ -24,19 +24,16 @@
     </top>
     <center>
         <SplitPane dividerPositions="0.7" BorderPane.alignment="CENTER">
-            <Pane minHeight="635.0" minWidth="635.0" prefHeight="635.0" prefWidth="635.0">
-                <padding>
-                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                </padding>
-                <Canvas height="625.0" width="625.0"/>
-            </Pane>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                <Canvas fx:id="canvas" height="625.0" width="625.0"/>
+            </HBox>
             <AnchorPane minHeight="0.0" minWidth="270.0">
                 <ChoiceBox fx:id="islandDisplayChoice" layoutX="14.0" layoutY="14.0" prefHeight="25.0"
                            prefWidth="250.0"/>
                 <Button layoutX="14.0" layoutY="51.0" mnemonicParsing="false" onAction="#onNextBridge"
                         prefWidth="120.0" text="next bridge"/>
-                <Button layoutX="144.0" layoutY="51.0" mnemonicParsing="false" onAction="#onSolve" prefWidth="120.0"
-                        text="solve"/>
+                <Button layoutX="144.0" layoutY="51.0" mnemonicParsing="false" onAction="#onSolve"
+                        prefWidth="120.0" text="solve"/>
             </AnchorPane>
         </SplitPane>
     </center>
