--- a/src/main/resources/ui/main.fxml
+++ b/src/main/resources/ui/main.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import java.lang.String?>
-<?import javafx.collections.FXCollections?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0"
             prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="de.karstenkoehler.bridges.ui.MainController">
@@ -65,7 +65,7 @@
                     <Insets right="5.0"/>
                 </HBox.margin>
             </Label>
-            <Label fx:id="stateText" text="empty"/>
+            <Label fx:id="lblState" text="empty"/>
         </HBox>
     </bottom>
 </BorderPane>
