--- a/src/main/resources/ui/main.fxml
+++ b/src/main/resources/ui/main.fxml
@@ -63,7 +63,8 @@
                 <Button fx:id="btnToggleSimulation" layoutX="15.0" layoutY="53.0" mnemonicParsing="false"
                         onAction="#onSolve" prefHeight="30.0"
                         prefWidth="250.0" text="Auto Step"/>
-                <Slider fx:id="slSpeed" layoutX="71.0" layoutY="99.0" max="1500.0" min="50.0" prefHeight="20.0"
+                <Slider fx:id="slSpeed" layoutX="71.0" layoutY="99.0" max="25.0" min="1.0" value="10.0"
+                        prefHeight="20.0"
                         prefWidth="191.0"/>
                 <Label layoutX="15.0" layoutY="99.0" text="Speed"/>
             </AnchorPane>
