--- a/src/main/resources/ui/new.fxml
+++ b/src/main/resources/ui/new.fxml
@@ -78,14 +78,15 @@
                 <Insets left="15.0" right="15.0"/>
             </HBox.margin>
         </CheckBox>
-        <Button mnemonicParsing="false" onAction="#onCancel" prefWidth="75.0" text="Cancel" GridPane.columnIndex="3"
-                GridPane.rowIndex="6">
+        <ProgressBar fx:id="progress" visible="false"/>
+        <Button fx:id="btnCancel" mnemonicParsing="false" onAction="#onCancel" prefWidth="75.0" text="Cancel"
+                GridPane.columnIndex="3" GridPane.rowIndex="6">
             <HBox.margin>
                 <Insets/>
             </HBox.margin>
         </Button>
-        <Button mnemonicParsing="false" onAction="#onOk" prefWidth="75.0" text="OK" GridPane.columnIndex="2"
-                GridPane.rowIndex="6">
+        <Button fx:id="btnOk" mnemonicParsing="false" onAction="#onOk" prefWidth="75.0" text="OK"
+                GridPane.columnIndex="2" GridPane.rowIndex="6">
             <HBox.margin>
                 <Insets/>
             </HBox.margin>
