--- a/src/main/resources/ui/toast.fxml
+++ b/src/main/resources/ui/toast.fxml
@@ -9,7 +9,7 @@
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
     </padding>
-    <HBox spacing="10.0"
+    <HBox spacing="10.0" alignment="CENTER_LEFT"
           style="-fx-background-radius: 10; -fx-background-color: WHITE; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
         <padding>
             <Insets bottom="5.0" left="15.0" right="15.0" top="5.0"/>
